--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>README<title>
+  <title>https://www.nlpformentalhealth.me/<title>
 </head>
 <body>
   <h1>KEYPOINTS</h1>
